Создано с помощью Colaboratory

--- a/лаба5.ipynb
+++ b/лаба5.ipynb
@@ -606,12 +606,22 @@
         "  stat={}\n",
         "  for letter in text:\n",
         "    letter=letter.lower()\n",
-        "    stat[letter]=stat.get(letter, 0)+1\n",
-        "  return stat\n",
+        "    stat[letter]=stat.get(letter, 0)+1 \n",
+        "\"\"\"\n",
+        "stat[letter] ЗАПИСЫВАЕМ КЛЮЧ СО ЗНАЧЕНИЕМ letter = КОТОРОЕ РОВНЯЕТСЯ stat.get(letter, 0)+1 ИЩЕМ НУЖНУЮ БУКВУ И ДОБАВЛЯЕМ ЗНАЧЕНИЕ +1\n",
+        "   \n",
+        "#get() возвращает значение для ключа key , если ключ находится в словаре, если ключ отсутствует то вернет значение default . Если значение default не задано и ключ key не найден, то метод вернет значение None .\n",
+        "#stat.get поиск определенного значения в массиве stat, в скобках первая переменная - то, что ищет; вторая переменная- то, что запишет, если не найдет; является значением ключа\n",
+        "#letter - ключ в словаре \n",
+        "\"\"\"\n",
         "\n",
+        "  return stat\n",
         "text = input('Введите предложение: ')\n",
         "stat = symbol_statistics(text)\n",
         "for symbol in sorted(stat):\n",
+        "'''\n",
+        "Функция sorted() возвращает новый отсортированный список итерируемого объекта (списка, словаря, кортежа). По умолчанию она сортирует его по возрастанию.\n",
+        "'''\n",
         "  print(symbol, '=', stat[symbol])\n",
         "# --------------\n",
         "# Пример вывода:\n",
@@ -839,28 +849,29 @@
       "cell_type": "code",
       "source": [
         "def pow1(value,base):\n",
-        "  if base == 0:\n",
+        "  if base == 0: \n",
         "    return 1\n",
         "  else:\n",
         "    return value**base\n",
         "\n",
-        "def pow2(value, base):\n",
-        "  if base == 0:\n",
-        "    return 1\n",
-        "  else:\n",
-        "    return pow2(value, base-1)*value"
+        "def recursion(value, base, result=1):\n",
+        "    if base == 0:\n",
+        "        return result\n",
+        "    else:\n",
+        "        result *= value\n",
+        "        return recursion(value, base - 1, result)"
       ],
       "metadata": {
         "id": "IVBvZCaKV_Xl"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "print(pow1(5,3))\n",
-        "print(pow2(5,3))\n",
+        "print(recursion(5,3))\n",
         "# --------------\n",
         "# Пример вывода:\n",
         "#\n",
@@ -872,9 +883,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "k8t5lW_CWCno",
-        "outputId": "02f16a06-0851-4f1e-8aa2-3cce97a98a7f"
+        "outputId": "1257f7aa-8042-4202-af78-661cabaf3b45"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
